# P1_ENVTest

./: .gitattributes  .gitignore  main.py  pyproject.toml  pyrightconfig.json
src/pipeline/: ingestmain.py
